--- a/detection/configs/defect.yaml
+++ b/detection/configs/defect.yaml
@@ -1,1 +1,26 @@
-
+_BASE_: "Base-RCNN-C4-BN.yaml"
+MODEL:
+  MASK_ON: False
+  WEIGHTS: "detectron2://ImageNetPretrained/MSRA/R-50.pkl"
+  ROI_HEADS:
+    NUM_CLASSES: 5
+  PIXEL_MEAN: [123.675, 116.280, 103.530]
+  PIXEL_STD: [58.395, 57.120, 57.375]
+  WEIGHTS: "See Instructions"
+  RESNETS:
+    STRIDE_IN_1X1: False
+INPUT:
+  MIN_SIZE_TRAIN: (480, 512, 544, 576, 608, 640, 672, 704, 736, 768, 800)
+  MIN_SIZE_TEST: 800
+  FORMAT: "RGB"
+DATASETS:
+  TRAIN: ('defect_train',)
+  TEST: ('defect_val',)
+SOLVER:
+  STEPS: (48000, 64000)
+  MAX_ITER: 72000
+  WARMUP_ITERS: 100
+  WEIGHT_DECAY: 0.0001
+  GAMMA: 0.1
+TEST:
+  EVAL_PERIOD: 2000
