--- a/detection/configs/voc.yaml
+++ b/detection/configs/voc.yaml
@@ -1,1 +1,23 @@
-
+_BASE_: "Base-RCNN-C4-BN.yaml"
+MODEL:
+  MASK_ON: False
+  WEIGHTS: "See Instructions"
+  ROI_HEADS:
+    NUM_CLASSES: 20
+  PIXEL_MEAN: [123.675, 116.280, 103.530]
+  PIXEL_STD: [58.395, 57.120, 57.375]
+  RESNETS:
+    STRIDE_IN_1X1: False
+INPUT:
+  MIN_SIZE_TRAIN: (480, 512, 544, 576, 608, 640, 672, 704, 736, 768, 800)
+  MIN_SIZE_TEST: 800
+  FORMAT: "RGB"
+DATASETS:
+  TRAIN: ('voc_2007_trainval', 'voc_2012_trainval')
+  TEST: ('voc_2007_test',)
+SOLVER:
+  STEPS: (48000, 64000)
+  MAX_ITER: 72000
+  WARMUP_ITERS: 100
+TEST:
+  EVAL_PERIOD: 2000
